<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="?android:attr/buttonBarStyle"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal" >

	<Button
		android:id="@+id/fromLastPositionButton"
		style="?android:attr/buttonBarButtonStyle"
		android:layout_width="0px"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/fromLastPosition" />

	<Button
		android:id="@+id/fromBeginOfLastItemButton"
		style="?android:attr/buttonBarButtonStyle"
		android:layout_width="0px"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/fromBeginOfLastItem" />

	<Button
		android:id="@+id/fromBeginOfPlayListButton"
		style="?android:attr/buttonBarButtonStyle"
		android:layout_width="0px"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/fromBeginOfPlayList" />

</LinearLayout>